[gd_scene load_steps=16 format=3 uid="uid://r71e1emmrhv2"]

[ext_resource type="Script" path="res://scripts/tamtam.gd" id="1_lwgyx"]
[ext_resource type="Texture2D" uid="uid://df43piis8bt3o" path="res://assets/sprites/tamtam.png" id="2_ud52u"]
[ext_resource type="PackedScene" uid="uid://bde6mn6mtrhuy" path="res://scenes/health_bar.tscn" id="3_45c13"]
[ext_resource type="Script" path="res://scripts/area_2d_tamtam.gd" id="4_lkgw7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kmy8n"]
atlas = ExtResource("2_ud52u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy6fb"]
atlas = ExtResource("2_ud52u")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv5a4"]
atlas = ExtResource("2_ud52u")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr7kh"]
atlas = ExtResource("2_ud52u")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8duwg"]
atlas = ExtResource("2_ud52u")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8421"]
atlas = ExtResource("2_ud52u")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5g5p"]
atlas = ExtResource("2_ud52u")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_whlma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmy8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy6fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv5a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr7kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8duwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8421")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5g5p")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_ame32"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xl3fr"]
radius = 5.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1c51b"]
radius = 27.9821
height = 109.721

[node name="tamtam" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_lwgyx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-1, -4)
sprite_frames = SubResource("SpriteFrames_whlma")
autoplay = "default"
script = SubResource("GDScript_ame32")

[node name="ProgressBar" parent="AnimatedSprite2D" instance=ExtResource("3_45c13")]
offset_left = -6.0
offset_top = -9.0
offset_right = 5.0
offset_bottom = -5.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5
script = ExtResource("4_lkgw7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_xl3fr")

[node name="RayCastRight" type="RayCast2D" parent="Area2D"]
position = Vector2(-1, 0)
target_position = Vector2(6, 0)
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="Area2D"]
target_position = Vector2(-8, 0)
collision_mask = 2

[node name="hitzone" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_xl3fr")

[node name="AgroZone" type="Area2D" parent="."]
visible = false
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroZone"]
position = Vector2(0, -14)
rotation = -1.57032
shape = SubResource("CapsuleShape2D_1c51b")

[node name="TimerDamage" type="Timer" parent="."]
wait_time = 1.3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AgroZone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="AgroZone" to="." method="_on_agro_zone_body_exited"]
[connection signal="timeout" from="TimerDamage" to="." method="_on_timer_timeout"]
